--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+For this project, me and my partner was implementing a fairly simple shell called ashell. The shell must be able to execute applications, be able to setup pipes between executed applications, redirect standard input/output from/to files for the executed applications, and perform simple commands internally. 
 
 cd works.
 ls works.
@@ -5,7 +6,7 @@ pwd works.
 ff works.
 up/down works.
 left/right works.
-piping/redirect: we understand but really not sure how to implement the code. 
+piping/redirect: halfly works. 
 
 Here are the external sources that we viewed to help us complete this project:
  
